trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
/* */

/* ########################################################################################################### */


/* Start:  Generic binder view tools styles. */
	.vibe-binderViewTools
	{
		display: block;
		padding: 10px;
		margin-bottom: 5px;
		-moz-border-radius: 5px;
		-webkit-border-radius: 5px;
	}
/* End:  Generic binder view tools styles. */

/* Start:  GWT folder view styles. */
	/* ...Start:  Accessory styles. */
		.vibe-accessoriesPanel {color: #333; background-color: #EAEBE8;}
	/* ...End:  Accessory styles. */
	
	/* ...Start:  Bread crumb panel styles. */
		.vibe-breadCrumbPanel {}
	/* ...End:  Bread crumb panel styles. */
	
	/* ...Start:  Description panel styles. */
		.vibe-descriptionContent        {}
		.vibe-descriptionContentClipped {height: 225px; overflow: auto !important;}
		.vibe-descriptionExpanderAnchor {text-decoration: none; cursor: pointer;}
		.vibe-descriptionExpanderImg    {position: absolute; right: 0px; top: -8px; border: 0px none;}
		.vibe-descriptionExpanderBar    {margin-top: 0.5em; margin-bottom: 8px; border-bottom: 1px solid #CCC; position: relative;}
		.vibe-descriptionHTML           {overflow: hidden;}
		.vibe-descriptionPanel          {padding-left: 10px;}
		.vibe-descriptionText           {overflow: hidden;}
	/* ...End:  Description panel styles. */
	
	/* ...Start:  Entry menu panel styles. */
		.vibe-entryMenuPanel {padding: 0px !important; padding-top: 10px !important;}
	/* ...End:  Entry menu panel styles. */
	
	/* ...Start:  Filter panel styles. */
		.vibe-filterAnchor                 {cursor: pointer;}
		.vibe-filterAnchor-hover           {color: #135c8f; cursor: pointer; background: url(images/blends/teal_slice.png) repeat-x; background-position:center; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
		.vibe-filterAnchorLabel            {font-size: 12px; white-space: nowrap;}
		.vibe-filterAnchorLabel-current    {color: white !important; font-weight: bold !important; background-color: #81b2bd; padding: 2px 5px; -moz-border-radius: 3px; -webkit-border-radius: 3px;}
		.vibe-filterAnchorLabel-notcurrent {font-weight: normal !important; padding: 2px 5px;}
		.vibe-filterEditPanel              {font-size: 11px !important;}
		.vibe-filterEditLabel              {font-size: 11px; white-space: nowrap;}
		.vibe-filterPanel                  {background-color: #EAF5F5;}
		.vibe-filtersGrid                  {}
		.vibe-filtersLabel                 {}
		.vibe-filtersPanel                 {padding-left: 10px; font-size: 11px !important;}
	/* ...End:  Filter panel styles. */
	
	/* ...Start:  Footer panel styles. */
		.vibe-footerPanel                       {padding-top: 5px !important;}
		.vibe-footerAnchor                      {cursor: pointer; color: #666;}
		.vibe-footerAnchor-hover                {color: #135c8f; cursor: pointer; background: url(images/blends/teal_slice.png) repeat-x; background-position:center; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
		.vibe-footerAnchorLabel                 {font-size: small;}
		.vibe-footerAnchorPanel                 {text-align: center;}
		.vibe-footerDataCloser                  {text-align: right;}
		.vibe-footerDataCloserAnchor            {cursor: pointer;}
		.vibe-footerDataCloserImage             {}
		.vibe-footerDataHintGrid                {width: 100%; background: #eaebe8; border-spacing: 0px;}
		.vibe-footerDataHintGridFooter          {padding: 10px 10px 6px 6px;}
		.vibe-footerDataHintGridHeader          {font-weight: bold;}
		.vibe-footerDataLinksGrid               {width: 100%; background: #cecece; border-spacing: 0px;}
		.vibe-footerDataLinksInput              {width: 100%; background-color: #cecece; overflow: hidden; padding: 0px !important; border: 0px;}
		.vibe-footerDataLinksOpenerAnchor       {cursor: pointer; color: #666; text-decoration: none;}
		.vibe-footerDataLinksOpenerAnchor-hover {color: #135c8f; cursor: pointer; background: url(images/blends/teal_slice.png) repeat-x; background-position:center; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
		.vibe-footerDataLinksOpenerLabel        {}
		.vibe-footerDataLinksPanel              {padding: 10px;}
		.vibe-footerDataLinksText               {}
		.vibe-footerDataPanel                   {background-color: #eaebe8; padding: 10px; margin: 20px; display: block; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
	/* ...End:  Footer panel styles. */
	
	/* ...Start:  Generic folder view styles. */
		.vibe-folderViewBase {padding: 8px;}
	/* ...End:  Generic folder view styles. */
	
	/* ...Start:  Generic data table folder view styles. */
		.vibe-dataTableFolderColumn            {}
		.vibe-dataTableFolderColumn-select     {}
		.vibe-dataTableFolderDataTableBase     {}
		.vibe-dataTableFolderFlowPanelBase     {}
		.vibe-dataTableFolderRow               {}
		.vibe-dataTableFolderRow-select        {}
		.vibe-dataTableFolderViewBase          {}
		.vibe-dataTableFolderVerticalPanelBase {}
	/* ...End:  Generic data table folder view styles. */
	
	/* ...Start:  Data table cell styles. */
		.vibe-dataTableCustom-anchor         {}
		.vibe-dataTableCustom-anchor-label   {}
		.vibe-dataTableCustom-event          {}
		.vibe-dataTableCustom-event-allDay   {}
		.vibe-dataTableCustom-event-start    {}
		.vibe-dataTableCustom-event-end      {}
		.vibe-dataTableCustom-event-duration {}
		.vibe-dataTableCustom-string         {}
		.vibe-dataTableEntry-download        {border: 0px solid #666666; background: url(images/move_down.gif); background-repeat: no-repeat; background-position:  left center; padding-left: 15px; padding-right: 0px; line-height: 11px;}
		.vibe-dataTableEntry-title           {cursor: pointer; color: #135c8f !important;}
		.vibe-dataTableEntry-unseenMarker    {display: inline; cursor: pointer;}
		.vibe-dataTableEntry-viewAnchor      {text-decoration: none;}
		.vibe-dataTableEntry-viewLabel       {}
		.vibe-dataTableLink-hover            {color: #135c8f; cursor: pointer; background: url(images/blends/teal_slice.png) repeat-x; background-position:center; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
		.vibe-dataTableLink-hoverHint        {font-family: Arial, Helvetica, sans-serif; position:absolute; border:1px solid #d6dede; margin:2px; padding: 10px; background-color: #EBECA5; width: 300px; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
		.vibe-dataTableLink-hoverHintLabel   {font-family: Arial, Helvetica, sans-serif; font-weight: inherit; font-size: 12px; background-color: transparent; color: #333333;}
		.vibe-dataTablePresence-control      {}
		.vibe-dataTablePresence-label        {display: inline; font-weight: bold; padding-left: 2px !important;}
		.vibe-dataTablePresence-disabled     {color: #c4c4c4;}
		.vibe-dataTablePresence-enabled      {color: #353838;}
	/* ...End:  Data table cell styles. */

	/* ...Start:  Discussion folder view styles. */
		.vibe-discussionFolderDataTable {}
		.vibe-discussionFolderFlowPanel {}
	/* ...End:  Discussion folder view styles. */

	/* ...Start:  File folder view styles. */
		.vibe-fileFolderDataTable {}
		.vibe-fileFolderFlowPanel {}
	/* ...End:  File folder view styles. */
/* End:  GWT folder view styles. */

